# coqfmt

./: .dockerignore  .gitignore  .ocamlformat  Dockerfile  README.md  coqfmt.opam  dune-project  index.html
.github/workflows/: deploy-api-docs.yml  docs.yml  test.yml
coqfmt/: index.html
coqfmt/Coqfmt/: index.html
lib/: ast.ml  ast.mli  astparser.ml  astparser.mli  astpreprocessing.ml  astpreprocessing.mli  conversion.ml  conversion.mli  coqfmt.ml  coqfmt.mli  coqproject.ml  coqproject.mli  dune  format.ml  format.mli  init.ml  init.mli  pp.ml  ppast.ml  ppast.mli  ppltac.ml  ppltac.mli  printer.ml  printer.mli
test/: coqfmt.ml  dune
test/check-mode-test/: formatted.v  test.sh  unformatted.v
test/coq_files/anonymous-function/: in.v  out.v
test/coq_files/arguments/: in.v  out.v
test/coq_files/arguments/multiple/: in.v  out.v
test/coq_files/binder/type-for-all-parameters/: in.v  out.v
test/coq_files/break-long-lines/binary-operator/: in.v  out.v
test/coq_files/break-long-lines/compute/: in.v  out.v
test/coq_files/break-long-lines/definition/: in.v
test/coq_files/break-long-lines/example/: in.v  out.v
test/coq_files/break-long-lines/induction/: in.v  out.v
test/coq_files/comments/: in.v  out.v
test/coq_files/conjecture/: in.v
test/coq_files/example/: in.v  out.v
test/coq_files/export/: in.v  out.v
test/coq_files/fact/: out.v
test/coq_files/function-application-for-multiple-arguments/: out.v
test/coq_files/if-then-else/: in.v  out.v
test/coq_files/implicit-types-with-atmark/: in.v
test/coq_files/inductive/: in.v  out.v
test/coq_files/lemma/: in.v  out.v
test/coq_files/match/: in.v  out.v
test/coq_files/module/: in.v  out.v
test/coq_files/multiple-inductives/: in.v
test/coq_files/notation/: out.v
test/coq_files/set-warnings/: in.v
test/coq_files/theorem/: in.v  out.v
test/coq_project_test/: Bar.formatted.v  Bar.v  Foo.v  _CoqProject  test.sh
test/require-test/: Bar.formatted.v  Bar.v  bar.formatted.v  bar.v  test.sh
(+846 files in other folders)
